# kprof

./: README.org
kprof/: ChangeLog  Doxyfile  INSTALL  TODO  VERSION
kprof-cvsbackup/kprof/: .cvsignore  AUTHORS  ChangeLog  Kprof.kdevelop  Makefile.am  Makefile.cvs  Makefile.in  README  TODO  VERSION  acinclude.m4  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  kprof.kdevprj  kprof.kdevses  kprof.lsm  kprof.spec  subdirs
kprof-cvsbackup/kprof/admin/: acinclude.m4.in
kprof-cvsbackup/kprof/debian/: .cvsignore  changelog  control  copyright  doc-base  kprof.1  kprof.xpm  links  menu  override  rules
kprof-cvsbackup/kprof/doc/en/: Makefile.am  index.docbook
kprof-cvsbackup/kprof/kprof/: .cvsignore  Log.cpp  Log.h  Makefile.am  Makefile.in  clientsidemap.cpp  clientsidemap.h  cprofileinfo.cpp  cprofileinfo.h  cprofileviewitem.cpp  cprofileviewitem.h  dotCallGraph.cpp  dotCallGraph.h  kprof.cpp  kprof.desktop  kprof.h  kprofui.rc  kprofwidget.cpp  kprofwidget.h  main.cpp  parseArguments.cpp  parseArguments.h  parseprofile.cpp  parseprofile.h  parseprofile_fnccheck.h  parseprofile_gprof.cpp  parseprofile_gprof.h  parseprofile_pose.cpp  parseprofile_pose.h  vcgCallGraph.cpp  vcgCallGraph.h
kprof-cvsbackup/kprof/kprof/doc/: Makefile.in
kprof-cvsbackup/kprof/kprof/doc/kprof/: Makefile.am  Makefile.in  index.docbook
kprof-cvsbackup/kprof/kprof/doc/kprof/HTML/: .keepme
kprof-cvsbackup/kprof/po/: .cvsignore
kprof/src/: CMakeLists.txt  diffmodel.cpp  diffmodel.h  flatproxymodel.cpp  hierarchicproxymodel.h  kproftoplevel.cpp  kproftoplevel.h  kprofui.rc  main.cpp  objectproxymodel.cpp  profilemodel.h  profileproxyview.h
trunk/kprof/: AUTHORS  CMakeLists.txt  README
trunk/kprof-cvsbackup/kprof/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  TODO  VERSION  aclocal.m4  config.h.in  configure  configure.in  configure.in.in  kprof.kdevprj  kprof.kdevses  kprof.lsm  kprof.spec  subdirs
trunk/kprof-cvsbackup/kprof/admin/: debianrules
trunk/kprof-cvsbackup/kprof/debian/: .cvsignore  changelog  control  copyright  doc-base  kprof.1  rules
trunk/kprof-cvsbackup/kprof/doc/en/: .cvsignore  index.docbook
trunk/kprof-cvsbackup/kprof/kprof/: .cvsignore  Log.cpp  Log.h  Makefile.am  Makefile.in  call-graph.ui  cconfigure.cpp  cconfigure.h  clientsidemap.cpp  cprofileinfo.h  cprofileviewitem.cpp  cprofileviewitem.h  ctidyup.cpp  ctidyup.h  dotCallGraph.cpp  dotCallGraph.h  kprof.cpp  kprof.desktop  kprof.h  kproffile.cpp  kproffile.h  kprofui.rc  kprofwidget.cpp  kprofwidget.h  main.cpp  parseArguments.cpp  parseprofile.h  parseprofile_fnccheck.cpp  parseprofile_fnccheck.h  parseprofile_gprof.cpp  parseprofile_gprof.h  parseprofile_pose.cpp  parseprofile_pose.h  vcgCallGraph.cpp  vcgCallGraph.h
trunk/kprof-cvsbackup/kprof/kprof/doc/: Makefile.am  Makefile.in
trunk/kprof-cvsbackup/kprof/kprof/doc/kprof/: .cvsignore  Makefile.in  index.docbook
trunk/kprof-cvsbackup/kprof/po/: de.po  kprof.pot
trunk/kprof/src/: flatproxymodel.h  gprofmodel.cpp  gprofmodel.h  hierarchicproxymodel.cpp  kprofwidget.cpp  kprofwidget.h  objectproxymodel.h  profilemodel.cpp  profileproxyview.cpp
